--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
-html, body {
+body {
   height: 100%;
-  background-color: black;
+  background-color: #0091f742;
 }
 
 * {
@@ -9,10 +9,14 @@ html, body {
   box-sizing: border-box;
 }
 
-h1{
-  display: flex;
-  justify-content: center;
-  color: aqua;
+.header {
+  width: 100%;
+  background-color: #0091f7;
+  color: #fff;
+  text-align: center;
+}
+h3 {
+  padding: 50px 0px;
 }
 
 #chat {
@@ -21,24 +25,22 @@ h1{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: aqua;
+  padding-top: 100px;
 }
 
 input {
-  background-color: black;
   width: 600px;
   border: 1px solid #ddd;
   height: 50px;
   padding: 0 20px;
   font-size: 14px;
-  color: aqua;
 }
 
 button {
   width: 600px;
   height: 50px;
   font-size: 14px;
-  background:  aqua;
+
   text-align: center;
   line-height: 50px;
   font-weight: bold;
@@ -46,11 +48,40 @@ button {
   margin-top: 10px;
 }
 
+.message {
+  padding: 10px 10px 10px 10px;
+  width: auto;
+}
 .messages {
-  width: 600px;
+  background-color: #fff;
+  width: 100%;
   height: 400px;
   margin: 20px 0;
   border: 1px solid #ddd;
   padding: 20px;
-  color: aqua;
+  overflow: auto;
+  border-radius: 5px;
+}
+
+.messageContainer {
+  border-radius: 15px;
+  background-color: #0091f7;
+  width: auto;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
+  margin: 20px 0;
+}
+
+.messageContainerAlter {
+  border-radius: 15px;
+  background-color: red;
+  width: auto;
+  color: #fff;
+  padding: 10px 10px 10px 10px;
+  margin: 20px 0;
+}
+@media (max-width: 800px) {
+  #chat {
+    padding-top: 30px;
+  }
 }
